--- a/_config.yml
+++ b/_config.yml
@@ -3,75 +3,70 @@
 # Import the theme
 theme: jekyll-theme-chirpy
 
-# The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
-# If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
-# otherwise, the layout language will use the default value of 'en'.
 lang: en
 
 # Change to your timezone › https://zones.arilyn.cc
-timezone:
+timezone: Africa/Accra
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: ScriptJester's Blog # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: A lazy researcher interested in all things low-level  # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  The blog of a lazy research who likes to break stuff
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: ""
+# url: " https://scriptjester.me"
 
 github:
-  username: github_username # change to your GitHub username
+  username: ScriptJ3st3r # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: Script_Jester # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: ScriptJester 
+  email: kaduah6@st.knust.edu.gh # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://twitter.com/script_jester # change to your Twitter homepage
+    - https://github.com/ScriptJ3st3r # change to your GitHub homepage
 
 # Site Verification Settings
-webmaster_verifications:
-  google: # fill in your Google verification code
-  bing: # fill in your Bing verification code
-  alexa: # fill in your Alexa verification code
-  yandex: # fill in your Yandex verification code
-  baidu: # fill in your Baidu verification code
-  facebook: # fill in your Facebook verification code
+# webmaster_verifications:
+#   google: # fill in your Google verification code
+#   bing: # fill in your Bing verification code
+#   alexa: # fill in your Alexa verification code
+#   yandex: # fill in your Yandex verification code
+#   baidu: # fill in your Baidu verification code
+#   facebook: # fill in your Facebook verification code
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
 
 # Web Analytics Settings
-analytics:
-  google:
-    id: # fill in your Google Analytics ID
-  goatcounter:
-    id: # fill in your GoatCounter ID
-  umami:
-    id: # fill in your Umami ID
-    domain: # fill in your Umami domain
-  matomo:
-    id: # fill in your Matomo ID
-    domain: # fill in your Matomo domain
-  cloudflare:
-    id: # fill in your Cloudflare Web Analytics token
-  fathom:
-    id: # fill in your Fathom Site ID
+# analytics:
+#   google:
+#     id: # fill in your Google Analytics ID
+#   goatcounter:
+#     id: # fill in your GoatCounter ID
+#   umami:
+#     id: # fill in your Umami ID
+#     domain: # fill in your Umami domain
+#   matomo:
+#     id: # fill in your Matomo ID
+#     domain: # fill in your Matomo domain
+#   cloudflare:
+#     id: # fill in your Cloudflare Web Analytics token
+#   fathom:
+#     id: # fill in your Fathom Site ID
 
 # Page views settings
 pageviews:
@@ -98,7 +93,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://avatars.githubusercontent.com/u/191349405?v=4
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
@@ -107,27 +102,27 @@ social_preview_image: # string, local or CORS resources
 # boolean type, the global switch for TOC in posts.
 toc: true
 
-comments:
-  # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider: # [disqus | utterances | giscus]
-  # The provider options are as follows:
-  disqus:
-    shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
-  # utterances settings › https://utteranc.es/
-  utterances:
-    repo: # <gh-username>/<repo>
-    issue_term: # < url | pathname | title | ...>
-  # Giscus options › https://giscus.app
-  giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
-    mapping: # optional, default to 'pathname'
-    strict: # optional, default to '0'
-    input_position: # optional, default to 'bottom'
-    lang: # optional, default to the value of `site.lang`
-    reactions_enabled: # optional, default to the value of `1`
+# comments:
+#   # Global switch for the post-comment system. Keeping it empty means disabled.
+#   provider: # [disqus | utterances | giscus]
+#   # The provider options are as follows:
+#   disqus:
+#     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+#   # utterances settings › https://utteranc.es/
+#   utterances:
+#     repo: # <gh-username>/<repo>
+#     issue_term: # < url | pathname | title | ...>
+#   # Giscus options › https://giscus.app
+#   giscus:
+#     repo: # <gh-username>/<repo>
+#     repo_id:
+#     category:
+#     category_id:
+#     mapping: # optional, default to 'pathname'
+#     strict: # optional, default to '0'
+#     input_position: # optional, default to 'bottom'
+#     lang: # optional, default to the value of `site.lang`
+#     reactions_enabled: # optional, default to the value of `1`
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
@@ -150,6 +145,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
+# baseurl: "https://scriptjester.me"
 baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
